--- a/css/styles.css
+++ b/css/styles.css
@@ -15,14 +15,14 @@ body {
 }
 
 .bg-dark {
-    background-color: #FFFFFF !important;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 8px 0 rgba(0, 0, 0, 0.1);
+    background-color: #555C7D !important;
+    box-shadow: 0 1px 2px 0 #555C7D, 0 2px 4px 0 #555C7D;
 }
 
 
 
 .navbar-dark .navbar-brand {
-    color: #555C7D;
+    color: white;
 }
 
 .myName {
@@ -114,7 +114,7 @@ a.button2:active {
     line-height: normal;
     letter-spacing: 1.2px;
     text-align: center;
-    margin-top: 2%;
+    margin-top: 3%;
 
 }
 
@@ -290,7 +290,7 @@ a.button3:active {
 }
 
 .navbar-dark .navbar-nav .nav-link {
-    color: #555C7D;
+    color: white;
 }
 
 .navbar-dark .navbar-nav .nav-link:visited {
@@ -306,7 +306,7 @@ a.button3:active {
 }
 
 .navbar-dark .navbar-brand {
-    color: #555C7D;
+    color: white;
 }
 
 .navbar-dark .navbar-brand:visited {
@@ -362,24 +362,37 @@ a.button3:active {
 
 
 
-@media screen and (min-width : 600px) {
 
-    .outer_container {
-        width: 100%;
-        display: flex;
-        overflow-x: scroll;
+.testimonies_container1 {
+    background-color: #be3143;
+    display: flex;
+
+    justify-content: space-between;
+    width: fit-content;
+    flex-wrap: nowrap;
+}
+
+.testimonial_card {
+    margin: 20px;
+}
+
+.outer_container {
+
+    overflow-x: scroll;
+    margin-top: 3%;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+
+}
 
 
 
-    }
 
-    .inner_container {
-        width: fit-content;
-        flex-wrap: nowrap;
-
-    }
-
-    .card12 {
-        width: 100%;
-    }
+.card_style123 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    border-radius: 360px;
 }
