--- a/css/styles.css
+++ b/css/styles.css
@@ -1,436 +1,498 @@
-body {
-    font-family: 'Roboto', sans-serif;
-    background-color: #FFFFFF;
-}
-
-
-.carousel-item {
-    height: 85vh;
-    min-height: 350px;
-    background: no-repeat center center scroll;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
-
-.bg-dark {
-    background-color: #555C7D !important;
-    box-shadow: 0 1px 2px 0 #555C7D, 0 2px 4px 0 #555C7D;
-}
-
-
-
-.navbar-dark .navbar-brand {
-    color: white;
-}
-
-.myName {
-    color: #FFFFFF;
-    font-weight: 400;
-    font-weight: 0;
-    font-size: 35px;
-
-}
-
-.font-weight-normal {
-    font-size: 30px;
-    color: #FFFFFF;
-    font-weight: 400;
-
-}
-
-a.button2 {
-    display: inline-block;
-    padding: 0.3em 0.5em;
-    border: 0.07em solid #FFFFFF;
-    margin: 0 0.3em 0.3em 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    color: #FFFFFF;
-    text-align: center;
-    transition: all 0.15s;
-}
-
-a.button2:hover {
-    color: #EC4849;
-    border-color: #EC4849;
-}
-
-a.button2:active {
-    color: #FFFFFF;
-    border-color: #FFFFFF;
-}
-
-@media all and (max-width:20em) {
-    a.button2 {
-        display: block;
-        margin: 0.4em auto;
-
-    }
-}
-
-.carousel-caption {
-
-    margin-bottom: 9%;
-}
-
-@media (min-width: 200px) {
-
-    .d-md-block {
-        display: inline;
-        display: block !important;
-    }
-
-}
-
-.header {
-    margin-top: 3%;
-}
-
-.ml3 {
-    font-size: 30px;
-    color: #FFFFFF;
-    font-weight: 400;
-
-}
-
-.about_header {
-    text-align: center;
-    margin-top: 20%;
-    font-size: 30px;
-    color: #2E1E4C;
-    font-weight: 400;
-}
-
-.about_heading {
-    color: #59607e;
-    font-size: 24px;
-    font-weight: 600;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: normal;
-    letter-spacing: 1.2px;
-    text-align: center;
-    margin-top: 3%;
-
-}
-
-.about {
-    padding: 10px 0;
-}
-
-.container_about {
-    margin-top: 2%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.profile-image {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-.profile-image img {
-    border: 1px solid #EC4849;
-    border-radius: 4px;
-    padding: 1px;
-    width: 200px;
-    border-radius: 360%;
-}
-
-.profile-image img:hover {
-    box-shadow: 0 0 2px 1px #EC4849 !important;
-
-}
-
-.card-title {
-    color: #59608C;
-    font-size: 15px;
-    font-weight: 500;
-    font-family: roboto;
-    margin-bottom: -10px;
-}
-
-.card-text {
-    margin-top: -10px;
-    font-family: roboto;
-    font-size: 15px;
-    font-weight: 500;
-    color: #1E1433;
-}
-
-.fa {
-    padding: 20px;
-    font-size: 30px;
-    width: 50px;
-    text-align: center;
-    text-decoration: none;
-    margin: 5px 2px;
-}
-
-.fa:hover {
-    opacity: 0.7;
-}
-
-.fa-facebook {
-    background: #3B5998;
-    color: white;
-
-}
-
-.fa-twitter {
-    background: #55ACEE;
-    color: white;
-}
-
-.fa-instagram {
-    background: #125688;
-    color: white;
-}
-
-ul.skills {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    align-items: center;
-    margin-left: -20px;
-
-
-    font-family: roboto;
-    font-size: 13px;
-    font-weight: 500;
-    color: #1E1433;
-
-}
-
-.progress {
-    width: 80vw;
-}
-
-.card-text1 {
-
-    font-family: roboto;
-    font-size: 14px;
-    font-weight: normal;
-    color: #1E1433;
-}
-
-.card_title_1 {
-    font-family: roboto;
-    margin: 0px;
-    color: #2e1f4d;
-    font-weight: normal;
-    font-size: 15px
-}
-
-.card-link {
-    color: #59608C;
-    font-size: 13px;
-    font-weight: normal;
-    font-family: roboto;
-
-}
-
-.card_body_style {
-    margin-bottom: -35px;
-}
-
-
-a.button3 {
-    display: inline-block;
-    padding: 0.3em 0.5em;
-    border: 0.07em solid #868BA2;
-    margin: 0 0.3em 0.3em 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    color: #868BA2;
-    text-align: center;
-    transition: all 0.15s;
-}
-
-a.button3:hover {
-    color: #EC4849;
-    border-color: #EC4849;
-}
-
-a.button3:active {
-    color: #868BA2;
-    border-color: #868BA2;
-}
-
-@media all and (max-width:20em) {
-    a.button3 {
-        display: block;
-        margin: 0.4em auto;
-
-    }
-}
-
-
-.portfolio_container {
-    padding-top: 5px;
-    padding-bottom: 40px;
-}
-
-.portfolio_container2 {
-    padding-top: 20px;
-}
-
-.card {
-    border: none;
-    background-color: #F8F9FA;
-}
-
-.navbar-dark .navbar-nav .nav-link {
-    color: white;
-}
-
-.navbar-dark .navbar-nav .nav-link:visited {
-    color: #1D2124;
-}
-
-.navbar-dark .navbar-nav .nav-link:hover {
-    color: #EC4849;
-}
-
-.card-image-top {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.navbar-dark .navbar-brand {
-    color: white;
-}
-
-.navbar-dark .navbar-brand:visited {
-    color: #1D2124;
-}
-
-.navbar-dark .navbar-brand:hover {
-    color: #EC4849;
-}
-
-.fa {
-    width: 20px;
-    padding: 2px;
-}
-
-.fa-linkedin {
-    background: #007bb5;
-    color: white;
-}
-
-.fa-github {
-    background: #007bb5;
-    color: white;
-}
-
-.image_style {
-    border: 1px solid #EC4849;
-    border-radius: 4px;
-    padding: 1px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 20%;
-    border-radius: 360px;
-}
-
-.image_style:hover {
-    box-shadow: 0 0 2px 1px #EC4849 !important;
-
-}
-
-.card {
-    background-color: white;
-}
-
-.card_title_2 {
-    color: #596080;
-    font-size: 14px;
-    font-weight: normal;
-    font-family: roboto;
-
-}
-
-
-
-
-.testimonies_container1 {
-    background-color: #be3143;
-    display: flex;
-
-    justify-content: space-between;
-    width: fit-content;
-    flex-wrap: nowrap;
-}
-
-.testimonial_card {
-    margin: 20px;
-}
-
-.outer_container {
-
-    overflow-x: scroll;
-    margin-top: 3%;
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-
-}
-
-
-
-
-.card_style123 {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    border-radius: 360px;
-}
-
-.contact_style {
-
-    text-align: center;
-
-}
-
-#card_contacts {}
-
-.contact-details {
-    padding: 3%;
-}
-
-.contact_style1 {
-
-    margin-top: 50px;
-    height: auto;
-
-}
-
-.list-group-item {
-    border: none;
-
-}
-
-.contact_style {
-    color: #6D738D;
-}
-
-.card-text3 {
-    margin-top: -10px;
-    font-family: roboto;
-    font-size: 15px;
-    font-weight: 500;
-    color: #1E1433;
-    text-align: center;
-    margin-top: 20px;
-}
+ html,
+ body {
+     height: 100%;
+     font-family: 'Roboto', sans-serif;
+     background-color: #FFFFFF;
+ }
+
+
+ .carousel-item {
+     height: 85vh;
+     min-height: 350px;
+     background: no-repeat center center scroll;
+     -webkit-background-size: cover;
+     -moz-background-size: cover;
+     -o-background-size: cover;
+     background-size: cover;
+ }
+
+ .bg-dark {
+     background-color: #758AA2 !important;
+
+ }
+
+
+
+ .navbar-dark .navbar-brand {
+     color: white;
+ }
+
+ .myName {
+     color: #FFFFFF;
+     font-weight: 400;
+     font-weight: 0;
+     font-size: 35px;
+
+ }
+
+ .font-weight-normal {
+     font-size: 30px;
+     color: #FFFFFF;
+     font-weight: 400;
+
+ }
+
+ a.button2 {
+     display: inline-block;
+     padding: 0.3em 0.5em;
+     border: 0.07em solid #FFFFFF;
+     margin: 0 0.3em 0.3em 0;
+     box-sizing: border-box;
+     text-decoration: none;
+     font-family: 'Roboto', sans-serif;
+     font-weight: 400;
+     color: #FFFFFF;
+     text-align: center;
+     transition: all 0.15s;
+ }
+
+ a.button2:hover {
+     color: #758AA2;
+     border-color: #758AA2;
+ }
+
+ a.button2:active {
+     color: #FFFFFF;
+     border-color: #FFFFFF;
+ }
+
+ @media all and (max-width:20em) {
+     a.button2 {
+         display: block;
+         margin: 0.4em auto;
+
+     }
+ }
+
+ .carousel-caption {
+
+     margin-bottom: 9%;
+ }
+
+ @media (min-width: 200px) {
+
+     .d-md-block {
+         display: inline;
+         display: block !important;
+     }
+
+ }
+
+ .header {
+     margin-top: 3%;
+ }
+
+ .ml3 {
+     font-size: 30px;
+     color: #FFFFFF;
+     font-weight: 400;
+
+ }
+
+ .about_header {
+     text-align: center;
+     margin-top: 20%;
+     font-size: 30px;
+     color: #2E1E4C;
+     font-weight: 400;
+ }
+
+ .about_heading {
+     color: #758AA2;
+     font-size: 24px;
+     font-weight: 600;
+     font-style: normal;
+     font-stretch: normal;
+     line-height: normal;
+     letter-spacing: 1.2px;
+     text-align: center;
+     margin-top: 3%;
+
+ }
+
+ .about {
+     padding: 10px 0;
+ }
+
+ .container_about {
+     margin-top: 2%;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+ }
+
+ .profile-image {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+
+ }
+
+ .profile-image img {
+     border: 1px solid #758AA2;
+     border-radius: 4px;
+     padding: 1px;
+     width: 200px;
+     border-radius: 360%;
+ }
+
+ .profile-image img:hover {
+     box-shadow: 0 0 2px 1px #758AA2 !important;
+
+ }
+
+ .card-title {
+     color: #758AA2;
+     font-size: 15px;
+     font-weight: 400;
+     font-family: roboto;
+     margin-bottom: -10px;
+ }
+
+ .card-text {
+     margin-top: -10px;
+     font-family: roboto;
+     font-size: 15px;
+     font-weight: 500;
+     color: #1E1433;
+ }
+
+ .fa {
+     padding: 20px;
+     font-size: 30px;
+     width: 50px;
+     text-align: center;
+     text-decoration: none;
+     margin: 5px 2px;
+ }
+
+ .fa:hover {
+     opacity: 0.7;
+ }
+
+ .fa-facebook {
+     background: #3B5998;
+     color: white;
+
+ }
+
+ .fa-twitter {
+     background: #55ACEE;
+     color: white;
+ }
+
+ .fa-instagram {
+     background: #125688;
+     color: white;
+ }
+
+ ul.skills {
+     display: flex;
+     justify-content: space-between;
+     flex-wrap: wrap;
+     align-items: center;
+     margin-left: -20px;
+
+
+     font-family: roboto;
+     font-size: 13px;
+     font-weight: 500;
+     color: #1E1433;
+
+ }
+
+ .progress {
+     width: 80vw;
+ }
+
+ .card-text1 {
+
+     font-family: roboto;
+     font-size: 14px;
+     font-weight: normal;
+     color: #1E1433;
+ }
+
+ .card_title_1 {
+     font-family: roboto;
+
+     color: #2e1f4d;
+     font-weight: normal;
+     font-size: 15px;
+     margin-bottom: 5%;
+ }
+
+ .card-link {
+     color: #59608C;
+     font-size: 13px;
+     font-weight: normal;
+     font-family: roboto;
+
+ }
+
+ .card_body_style {
+     margin-bottom: -35px;
+ }
+
+
+ a.button3 {
+     display: inline-block;
+     padding: 0.3em 0.5em;
+     border: 0.07em solid #868BA2;
+     margin: 0 0.3em 0.3em 0;
+     box-sizing: border-box;
+     text-decoration: none;
+     font-family: 'Roboto', sans-serif;
+     font-weight: 400;
+     color: #868BA2;
+     text-align: center;
+     transition: all 0.15s;
+ }
+
+ a.button3:hover {
+     color: #EC4849;
+     border-color: #EC4849;
+ }
+
+ a.button3:active {
+     color: #868BA2;
+     border-color: #868BA2;
+ }
+
+ @media all and (max-width:20em) {
+     a.button3 {
+         display: block;
+         margin: 0.4em auto;
+
+     }
+ }
+
+
+ .portfolio_container {
+     padding-top: 5px;
+     padding-bottom: 40px;
+ }
+
+ .portfolio_container2 {
+     padding-top: 20px;
+ }
+
+ .card {
+     border: none;
+     background-color: #F8F9FA;
+ }
+
+ .navbar-dark .navbar-nav .nav-link {
+     color: white;
+ }
+
+ .navbar-dark .navbar-nav .nav-link:visited {
+     color: #1D2124;
+ }
+
+ .navbar-dark .navbar-nav .nav-link:hover {
+     color: #192A56;
+ }
+
+ .card-image-top {
+     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+ }
+
+ .navbar-dark .navbar-brand {
+     color: white;
+ }
+
+ .navbar-dark .navbar-brand:visited {
+     color: #1D2124;
+ }
+
+ .navbar-dark .navbar-brand:hover {
+     color: #192A56;
+ }
+
+ .fa {
+     width: 20px;
+     padding: 2px;
+ }
+
+ .fa-linkedin {
+     background: #007bb5;
+     color: white;
+ }
+
+ .fa-github {
+     background: #007bb5;
+     color: white;
+ }
+
+ .image_style {
+     border: 1px solid #EC4849;
+     border-radius: 4px;
+     padding: 1px;
+     display: block;
+     margin-left: auto;
+     margin-right: auto;
+     width: 20%;
+     border-radius: 360px;
+ }
+
+ .image_style:hover {
+     box-shadow: 0 0 2px 1px #EC4849 !important;
+
+ }
+
+ .card {
+     background-color: white;
+ }
+
+ .card_title_2 {
+     color: #596080;
+     font-size: 14px;
+     font-weight: normal;
+     font-family: roboto;
+
+ }
+
+
+
+
+ .testimonies_container1 {
+     background-color: #be3143;
+     display: flex;
+
+     justify-content: space-between;
+     width: fit-content;
+     flex-wrap: nowrap;
+ }
+
+ .testimonial_card {
+     margin: 20px;
+ }
+
+ .outer_container {
+
+     overflow-x: scroll;
+     margin-top: 3%;
+     width: 80%;
+     margin-left: auto;
+     margin-right: auto;
+
+ }
+
+
+
+
+ .card_style123 {
+     display: block;
+     margin-left: auto;
+     margin-right: auto;
+     width: 50%;
+     border-radius: 360px;
+ }
+
+ .contact_style {
+
+     text-align: center;
+
+ }
+
+ #card_contacts {}
+
+ .contact-details {
+     padding: 3%;
+ }
+
+ .contact_style1 {
+
+     margin-top: 50px;
+     height: auto;
+
+ }
+
+ .list-group-item {
+     border: none;
+
+ }
+
+ .contact_style {
+     color: #6D738D;
+ }
+
+ .card-text3 {
+     margin-top: -10px;
+     font-family: roboto;
+     font-size: 15px;
+     font-weight: 500;
+     color: #1E1433;
+     text-align: center;
+     margin-top: 20px;
+ }
+
+ .icons {
+     margin-left: 29%;
+ }
+
+
+
+ .list-group-item {
+     background-color: #F8F9FA;
+ }
+
+ .py-4 {
+     background-color: #758AA2;
+
+     color: white;
+ }
+
+ #about-heart {
+     color: red;
+ }
+
+
+
+
+ a.button4 {
+     display: inline-block;
+     padding: 0.3em 0.5em;
+
+     margin: 0 0.3em 0.3em 0;
+     box-sizing: border-box;
+     text-decoration: none;
+     font-family: 'Roboto', sans-serif;
+     font-weight: 400;
+     color: #FFFFFF;
+     text-align: center;
+     transition: all 0.15s;
+ }
+
+ a.button4:hover {
+     color: #192A56;
+
+ }
+
+ a.button4:active {
+     color: #FFFFFF;
+
+ }
+
+ @media all and (max-width:20em) {
+     a.button4 {
+         display: block;
+         margin: 0.4em auto;
+
+     }
+ }
+
+ .progress-bar {
+     background-color: #758AA2;
+ }
