--- a/css/styles.css
+++ b/css/styles.css
@@ -437,13 +437,25 @@ a.button3:active {
     font-family: roboto;
     font-size: 15px;
     font-weight: 500;
-    color: #1E1433;
+    color: #758AA2;
     text-align: center;
     margin-top: 20px;
 }
 
+.card-text4 {
+
+    font-family: roboto;
+    font-size: 15px;
+    font-weight: 500;
+    color: #758AA2;
+    text-align: center;
+    margin-top: 10px;
+    margin-left: -20px;
+    margin-bottom: -1px;
+}
+
 .icons {
-    margin-left: 29%;
+    margin-left: 30%;
 }
 
 
